# haskell-rel8-example

./: CHANGELOG.md  LICENSE  README.md  fix-ghcide.sh  hie.yaml  reltest.cabal
app/: Main.hs  Statements.hs
src/: Reltest.hs
src/Reltest/: Queries.hs  Schemas.hs
