cabal-version:       2.4
name:                reltest
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              Scott Sedgwick
maintainer:          Scott Sedgwick <scott.sedgwick@gmail.com>
copyright:           2021 Scott Sedgwick
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base
                     , hasql
                     , rel8 == 1.1.0.0
                     , text
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
                       BlockArguments
                       DeriveAnyClass
                       DerivingStrategies
                       DerivingVia
                       DuplicateRecordFields
                       TypeFamilies
                       FlexibleContexts

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Reltest
  other-modules:       Reltest.Queries
                     , Reltest.Schemas

executable reltest
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Statements
  build-depends:       reltest
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
